BugFix: add more visibility to the header-search_type-select (bsc#963393)

--- a/branding/css/susemanager-theme.less
+++ b/branding/css/susemanager-theme.less
@@ -283,7 +283,7 @@ header, nav.navbar-pf {
 	}
 	form input.input-sm, form button.input-sm, form select.input-sm {
 		.box-shadow(-1px -1px 1px #838383);
-		height: 25px;
+		height: 28px;
 		margin-left: 4px;
 	}
 	form {
@@ -298,7 +298,7 @@ header, nav.navbar-pf {
 		    text-indent: 0.01px;
 		    text-overflow: '';
 		    line-height: normal;
-		    padding-top: 3px;
+		    padding: 2px 22px 2px 5px;
 		}
 	}
 	.btn.btn-info.input-sm {
